# mozio

./: .gitignore  .nginx  Makefile  README.md  mypi.ini  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  ssh_deploy.yml  test.yml
mozio/: models.py  serializers.py  services.py  urls.py  views.py
mozio/migrations/: 0001_initial.py
mozio/tests/: __init__.py  factories.py  providerSerializer_test.py  provider_test.py  serviceAreaSerializer_test.py  serviceArea_test.py
project/: settings.py  urls.py
